--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>Poulidis Oil</h1>
+                    <h1>Poulidis Family Olive Oil</h1>
                     <span class="tagline">Premium Pelion Olive Oil</span>
                 </div>
                 <ul class="nav-links">
@@ -38,6 +38,9 @@
     <main>
         <!-- Hero Section -->
         <section id="home" class="hero">
+            <div class="hero-image">
+                <img src="images/pelion_olive_tress.jpeg" alt="Ancient olive trees in Pelion">
+            </div>
             <div class="hero-content">
                 <h2 data-translate="hero.title">Premium Extra Virgin Olive Oil</h2>
                 <p data-translate="hero.subtitle">From 200-300 Year Old Trees in Pelion, Volos</p>
@@ -82,9 +85,8 @@
                         <p data-translate="about.desc3">Due to the limited quantity from these heritage trees, our olive oil is a premium product for those who appreciate quality and tradition.</p>
                     </div>
                     <div class="about-image">
-                        <div class="placeholder-image">
-                            <span>🫒 Ancient Olive Grove</span>
-                        </div>
+                        <img src="images/panoramic-view-pelion-sea-olive-groves.jpg" alt="Panoramic view of Pelion olive groves by the sea">
+                        <img src="images/olive-trees-field-peloponnese-greece-88716657.webp" alt="Olive trees in Greece" style="margin-top: 1rem;">
                     </div>
                 </div>
             </div>
@@ -119,6 +121,22 @@
             </div>
         </section>
 
+        <!-- Video Section -->
+        <section class="video-section">
+            <div class="container">
+                <h2 data-translate="video.title">From the Olive Grove to the Bottle</h2>
+                <div class="video-container" style="margin-top:0.5rem;">
+                    <video controls width="440" class="production-video" style="max-width:100%; height:auto;" poster="images/pelion_olive_tress.jpeg">
+                        <source src="videos/58d60ae9-080b-48b0-8890-e0f5ee64cd5c.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <p style="text-align:center; margin-top:1rem; color:#999; font-size:0.9rem; font-style:italic;">
+                    Note: For deployment, consider uploading this video to YouTube and embedding it
+                </p>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="contact">
             <div class="container">
@@ -136,16 +154,9 @@
                         <div class="social-media">
                             <h3 data-translate="contact.social.title">Follow Us</h3>
                             <div class="social-links">
-                                <a href="https://facebook.com" target="_blank" class="social-link">
+                                <a href="https://www.facebook.com/grigoris.poulidis" target="_blank" class="social-link">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                                    </svg>
-                                </a>
-                                <a href="https://instagram.com" target="_blank" class="social-link">
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                                     </svg>
                                 </a>
                             </div>
@@ -159,7 +170,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p data-translate="footer.text">&copy; 2024 Poulidis Premium Olive Oil. Family owned business from Pelion, Greece.</p>
+            <p data-translate="footer.text">&copy; 2025 Poulidis Premium Olive Oil. Family owned business from Pelion, Greece.</p>
         </div>
     </footer>
 
