--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Premium extra virgin olive oil from 200-300 year old trees in Pelion, Volos">
+    <meta name="author" content="Poulidis Family">
+    <meta name="copyright" content="© 2025 Poulidis Family Olive Oil. All rights reserved.">
     <title>Poulidis Premium Olive Oil</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -131,9 +133,6 @@
                         Your browser does not support the video tag.
                     </video>
                 </div>
-                <p style="text-align:center; margin-top:1rem; color:#999; font-size:0.9rem; font-style:italic;">
-                    Note: For deployment, consider uploading this video to YouTube and embedding it
-                </p>
             </div>
         </section>
 
@@ -171,6 +170,7 @@
     <footer class="footer">
         <div class="container">
             <p data-translate="footer.text">&copy; 2025 Poulidis Premium Olive Oil. Family owned business from Pelion, Greece.</p>
+            <p style="margin-top: 0.5rem; font-size: 0.85rem; opacity: 0.8;">All images, text, and content &copy; 2025 Poulidis Family. All rights reserved.</p>
         </div>
     </footer>
 
